fix height on screens so they are visible

--- a/public/style/style.css
+++ b/public/style/style.css
@@ -2,9 +2,6 @@
     height: 70px;
     margin: 5px;
 }
-.navbar {
-    position: unset;
-}
 .navbar-default .navbar-brand img {
     max-height: 100%;
 }
@@ -16,4 +13,8 @@
 }
 .footer {
     padding: 0 0 20px;
+}
+.screen {
+    margin-top: 220px;
+    min-height: calc(100vh - 220px)
 }
